--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
         "fabpot/goutte": "^3.1",
         "yajra/laravel-datatables-oracle": "^6.18",
         "pragmarx/google2fa": "^1.0",
-        "anhskohbo/no-captcha": "^2.1"
+        "anhskohbo/no-captcha": "^2.1",
+        "recca0120/laravel-payum": "^1.0.2",
+        "payum/paypal-express-checkout-nvp": "^1.3",
+        "payum/offline": "^1.3"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
