--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "anhskohbo/no-captcha": "^2.1",
         "recca0120/laravel-payum": "^1.0.2",
         "payum/paypal-express-checkout-nvp": "^1.3",
-        "payum/offline": "^1.3"
+        "payum/offline": "^1.3",
+        "laravelcollective/html": "5.2.5"
 
     },
     "require-dev": {
