--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "recca0120/laravel-payum": "^1.0.2",
         "payum/paypal-express-checkout-nvp": "^1.3",
         "payum/offline": "^1.3",
-        "laravelcollective/html": "5.2.5"
+        "laravelcollective/html": "5.2.5",
+        "kalnoy/nestedset": "^4.2",
+        "rtconner/laravel-tagging": "~2.2"
 
     },
     "require-dev": {
