--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "payum/offline": "^1.3",
         "laravelcollective/html": "5.2.5",
         "kalnoy/nestedset": "^4.2",
-        "rtconner/laravel-tagging": "~2.2"
+        "rtconner/laravel-tagging": "~2.2",
+        "cviebrock/eloquent-sluggable": "4.1"
 
     },
     "require-dev": {
